--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div>
+        <h1>Heading</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos facere impedit velit nam suscipit molestias commodi aperiam molestiae similique dolorem. Sed delectus suscipit quod neque ratione? Nesciunt quaerat sit dolores.</p>
+    </div>
 </body>
 </html>
